--- a/package.json
+++ b/package.json
@@ -4,26 +4,48 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run lint",
     "start": "node server.js",
-    "lite-server": "lite-server"
+    "lint": "eslint --quiet .",
+    "fix": "npx eslint --fix .",
+    "watch": "nodemon server.js",
+    "seed": "node seeders/seed.js",
+    "build": "webpack --watch",
+    "lite-server": "lite-server",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/coding-boot-camp/unit18hw.git"
+    "url": "git+https://github.com/ram-sah/Fitness-Tracker"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ram Sah",
+  "license": "Apache",
   "bugs": {
-    "url": "https://github.com/coding-boot-camp/unit18hw/issues"
+    "url": "https://fitness-tracker20.herokuapp.com"
   },
-  "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
+  "homepage": "https://github.com/ram-sah",
   "dependencies": {
+    "@babel/core": "^7.11.6",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1",
-    "npm": "^6.14.8"
+    "npm": "^6.14.8",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "mocha": "^5.2.0",
+    "prettier": "^1.13.7",
+    "webpack-pwa-manifest": "^4.2.0"
   }
 }
