--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ram-sah/Fitness-Tracker"
+    "url": "git+https://github.com/ram-sah/Progressive-Budget"
   },
   "author": "Ram Sah",
   "license": "Apache",
   "bugs": {
-    "url": "https://fitness-tracker20.herokuapp.com"
+    "url": "https://progressive-budget20.herokuapp.com/"
   },
   "homepage": "https://github.com/ram-sah",
   "dependencies": {
@@ -30,7 +30,7 @@
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "npm": "^6.14.8",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
@@ -38,14 +38,14 @@
   "devDependencies": {
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "cross-env": "^5.2.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cross-env": "^5.2.1",
     "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-config-prettier": "^2.10.0",
+    "eslint-plugin-prettier": "^2.7.0",
     "mocha": "^5.2.0",
-    "prettier": "^1.13.7",
+    "prettier": "^1.19.1",
     "webpack-pwa-manifest": "^4.2.0"
   }
 }
