--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   "homepage": "https://github.com/ram-sah",
   "dependencies": {
     "@babel/core": "^7.11.6",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
     "morgan": "^1.10.0",
-    "npm": "^6.14.8",
+    "npm": "^6.14.8",   
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
