--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "test": "npm run lint",
     "start": "node server.js",
     "lint": "eslint --quiet .",
-    "fix": "npx eslint --fix .",
-    "watch": "nodemon server.js",
-    "seed": "node seeders/seed.js",
-    "build": "webpack --watch",
-    "lite-server": "lite-server",
-    "heroku-postbuild": "webpack -p"
+    "fix": "npx eslint --fix .",    
+    "seed": "node seeders/seed.js",    
+    "lite-server": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -31,10 +28,7 @@
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
-    "morgan": "^1.10.0",
-    "npm": "^6.14.8",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "morgan": "^1.10.0"    
   },
   "devDependencies": {
     "@babel/preset-env": "^7.11.5",
